--- a/teste.css
+++ b/teste.css
@@ -8,6 +8,7 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container-catalogo{
     position: relative;
@@ -32,23 +33,19 @@ body{
 }
 .main h2{
     padding-left: 10px;
+    margin-block: 10px;
 }
 .slider{
-    overflow-x: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
-.arrow-left{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: auto;
-}
-.arrow-right{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: auto;
-    right: 0;
+.but{
+    padding: 20px 15px;
+    background: transparent;
+    border: none;
+    color: #fff;
+    cursor: pointer;
 }
 .card-list{
     display: flex;
@@ -75,7 +72,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 10px;
+    gap: 25px;
 }
 .bnt button{
     padding: 5px 15px;
