--- a/teste.css
+++ b/teste.css
@@ -11,7 +11,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .container-catalogo{
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,6 +38,7 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
+    overflow: hidden;
 }
 .but{
     padding: 20px 15px;
@@ -59,11 +59,15 @@ body{
     background-color: rgb(93, 160, 236);
     padding: 0;
     margin-inline: 10px;
-    width: 250px;
+    width: 230px;
     border-radius: 8px;
 }
 .card-item h3{
     color: rgb(255, 188, 62);
+}
+.img-cursos{
+    width: 230px;
+    border-radius: 8px 8px 0 0;
 }
 .text,.bnt{
     padding: 0px 10px 10px 10px;
@@ -85,8 +89,4 @@ body{
 }
 .bnt-sobre{
     background-color: rgb(44, 44, 247);
-}
-.img-cursos{
-    width: 250px;
-    border-radius: 8px 8px 0 0;
 }
